# ftp-monitor

./: README.md  ftp-monitor.cabal  stack.yaml
src/: Cas.hs  CommandLine.hs  Config.hs  Hash.hs  LsParser.hs  Main.hs  Segment.hs  SqlQQ.hs  Timestamp.hs  TmpFile.hsc  Util.hs
util/: migration0.py
