name:                ftp-monitor
version:             0.1.0.0
synopsis:            Monitor a ftp directory for changes,  and download files that are new or changed.
description:         Please see README.md
homepage:            https://github.com/lpsmith/ftp-monitor#readme
license:             BSD3
author:              Leon P Smith
maintainer:          leon@melding-monads.com
copyright:           (c) 2016 Leon P Smith
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable ftp-monitor
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       TmpFile
                       LsParser
                       SqlQQ
                       Timestamp
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       attoparsec,
                       base16-bytestring,
                       bytestring,
                       directory,
                       filepath,
--                       dns,
                       old-locale,
                       process,
                       sqlite-simple,
                       time,
                       template-haskell,
                       text,                      
                       unix
  ghc-options: -Wall
